# seckey

./: .travis.yml  Cargo.toml  README.md  appveyor.yml
.github/workflows/: ci.yml
benches/: eq.rs  key.rs  zero.rs
src/: alloc.rs  bytes.rs  cmpkey.rs  key.rs  lib.rs  seckey.rs  tempkey.rs  zerosafe.rs
tests/: bytes.rs  free.rs  key.rs  seckey.rs  tempkey.rs
