[package]
name = "seckey"
version = "0.7.1"
authors = ["quininer kel <quininer@live.com>"]
description = "Use `memsec` protected secret memory."
repository = "https://github.com/quininer/seckey"
documentation = "https://docs.rs/seckey/"
license = "MIT"
keywords = [ "protection", "memory", "secure" ]
categories = [ "no-std", "memory-management" ]

[badges]
travis-ci = { repository = "quininer/seckey" }
appveyor = { repository = "quininer/seckey" }

[dependencies]
memsec = "0.3"

[dev-dependencies]
nix = "0.9"
