[package]
name = "seckey"
version = "0.9.1"
authors = ["quininer kel <quininer@live.com>"]
description = "Use `memsec` protected secret memory."
repository = "https://github.com/quininer/seckey"
documentation = "https://docs.rs/seckey/"
license = "MIT"
keywords = [ "protection", "memory", "secure" ]
categories = [ "no-std", "memory-management" ]

[badges]
travis-ci = { repository = "quininer/seckey" }
appveyor = { repository = "quininer/seckey" }

[dependencies]
memsec = { version = "0.5", default-features = false }

[features]
default = [ "use_std" ]
nightly = [ "memsec/nightly" ]
use_std = [ "memsec/alloc", "memsec/use_os" ]
